revert tech1.tt so that it doesn't cause problems for downstream mods

--- a/techtree/tech1.tt
+++ b/techtree/tech1.tt
@@ -1,10 +1,1 @@
-#include "tech1-federation.xml"
-#include "tech1-romulan.xml"
-#include "tech1-klingon.xml"
-#include "tech1-gorn.xml"
-#include "tech1-hydran.xml"
-#include "tech1-lyran.xml"
-#include "tech1-isc.xml"
-#include "tech1-tholian.xml"
-#include "tech1-other.xml"
-#include "warpin-federation.xml"
+#include "tech1-orig.tt"
